[gd_scene load_steps=11 format=3 uid="uid://4awrcfjavxt6"]

[ext_resource type="Script" path="res://scenes/onimask.gd" id="1_3ush6"]
[ext_resource type="Texture2D" uid="uid://csawl7krir5xl" path="res://onimask/onimaskidle.png" id="2_e248q"]
[ext_resource type="Texture2D" uid="uid://721lwf5t4a15" path="res://onimask/onimaskrun.png" id="3_jqe3g"]
[ext_resource type="PackedScene" uid="uid://bl686o0mdn7hp" path="res://scenes/health_bar.tscn" id="6_268qi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fdxto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e248q")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e248q")
}, {
"duration": 1.0,
"texture": ExtResource("3_jqe3g")
}],
"loop": true,
"name": &"running",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnc7c"]
size = Vector2(17, 65.5)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_nracn"]
length = 222.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dvai7"]
radius = 27.0
height = 76.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_68rpr"]
radius = 9.0
height = 70.0

[sub_resource type="Curve" id="Curve_6y1bo"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.241573, 2), 0.0, 0.0, 0, 0]
point_count = 2

[node name="onimask" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
script = ExtResource("1_3ush6")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
scale = Vector2(0.468355, 0.468355)
sprite_frames = SubResource("SpriteFrames_fdxto")
animation = &"running"
autoplay = "idle"
frame_progress = 0.246679

[node name="EnemyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wnc7c")

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(20, 0)
target_position = Vector2(0, 41)

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 41)

[node name="CheckPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPlayer"]
rotation = -1.5708
shape = SubResource("SeparationRayShape2D_nracn")

[node name="EnemyHitbox" type="Area2D" parent="." groups=["enemiehitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
shape = SubResource("CapsuleShape2D_dvai7")

[node name="Attack_Duration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackAnticipation" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RecoverTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackHitBox" type="Area2D" parent="." groups=["EnemyAttack"]]
position = Vector2(0, -15)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackHitBox"]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_68rpr")

[node name="HealthBar" parent="." instance=ExtResource("6_268qi")]
offset_left = -19.0
offset_top = -48.0
offset_right = 19.0
offset_bottom = -45.0

[node name="Blood" type="CPUParticles2D" parent="."]
texture_filter = 1
texture_repeat = 1
emitting = false
amount = 13
lifetime = 0.4
one_shot = true
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(1, 1800)
initial_velocity_max = 211.27
angle_min = -305.5
angle_max = 189.1
scale_amount_min = 1.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6y1bo")
color = Color(0.690196, 0, 0, 1)

[connection signal="area_entered" from="CheckPlayer" to="." method="_on_check_player_area_entered"]
[connection signal="timeout" from="Attack_Duration" to="." method="_on_attack_duration_timeout"]
[connection signal="timeout" from="AttackAnticipation" to="." method="_on_attack_anticipation_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="RecoverTime" to="." method="_on_recover_time_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_stunned_timer_timeout"]
[connection signal="area_entered" from="AttackHitBox" to="." method="_on_attack_hit_box_area_entered"]
